# pytask-vscode

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  LICENSE  README.md  codecov.yml  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
src/pytask_vscode/: execution.py  plugin.py
tests/: conftest.py  test_import.py
