[metadata]
name = pytask_vscode
description = Additional Logging for VS Code integration
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pytask-dev/pytask-vscode
author = Max Jahn
author_email = max.jahn45@gmail.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Changelog = https://github.com/pytask-dev/pytask-vscode/blob/main/CHANGES.rst
    Documentation = https://github.com/pytask-dev/pytask-vscode
    Github = https://github.com/pytask-dev/pytask-vscode
    Tracker = https://github.com/pytask-dev/pytask-vscode/issues

[options]
packages = find:
install_requires =
    click
    pytask>=0.4.2
    requests
python_requires = >=3.7
include_package_data = True
package_dir = =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
pytask =
    pytask_vscode = pytask_vscode.plugin

[check-manifest]
ignore =
    src/pytask_vscode/_version.py
